add css section for subscription section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <a href="#" class="cart">Cart ($56)</a>
     </nav>
   </header>
+
+  <!-- AFter navbar -->
  <main class="hero">
     <div class="text-content">
       <h1><span class="bold">ALWAYS</span> <span class="orange">FRESH</span><br><span class="orange">FLOWERS</span></h1>
@@ -36,6 +38,8 @@
       <img src="assets/hero-flower.png" alt="Flowers" class="flowers-img"> 
     </div>
   </main>
+
+  <!-- Our Plans section -->
   <section class="products-section">
     <h2><span class="orange">Our</span> <span class="bold">Plants</span></h2>
     <p class="description">
@@ -99,10 +103,10 @@
         <button>Add to Cart</button>
       </div>
 
-      <!-- Add more product-card divs as needed -->
     </div>
   </section>
 
+  <!-- Flower & Plants Lover -->
 <section class="trusted-section">
   <div class="image-side">
     <img src="assets/flower-store.png" alt="Flower Shop" class="background-img">
@@ -117,7 +121,7 @@
     </ul>
   </div>
 </section>
-
+<!-- Latest Deal -->
 <section class="deals-section">
   <div class="section-header">
     <h2><span>Latest</span> Deals</h2>
@@ -147,7 +151,7 @@
     </div>
   </div>
 </section>
-
+<!-- Subscription -->
 <section class="subscribe-section">
   <div class="subscribe-overlay">
     <h2>Join the colorful Bunch</h2>
@@ -158,9 +162,9 @@
   </div>
 </section>
 
+<!-- Footer section -->
 
-
-<<footer class="footer">
+<footer class="footer">
   <div class="footer-container">
     <!-- Left: Logo + Text -->
     <div class="footer-left">
