responsive for footer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
  <main class="hero">
     <div class="text-content">
       <h1><span class="bold">ALWAYS</span> <span class="orange">FRESH</span><br><span class="orange">FLOWERS</span></h1>
-      <p>
+      <p class="para">
         Indulge your senses with the beauty and fragrance of our fresh flower shop.
         From classic roses to exotic blooms, we offer a wide variety of fresh flowers
         that are perfect for any occasion.
@@ -142,8 +142,8 @@
         <a href="#">Shop Now</a>
       </div>
     </div>
-
-    <div class="deal-card wide" style="background-image: url('assets/deal-zabo.png');">
+<br>
+    <div class="deal-card" style="background-image: url('assets/deal-zabo.png');">
       <div class="card-content">
         <h3>25% Off | Zabo Plant</h3>
         <a href="#">Shop Now</a>
