responsive for cart

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <a href="#">Home</a>
       <a href="#">Shop</a>
       <a href="#">About us</a>
-      <a href="#" class="cart">Cart ($56)</a>
+      <a href="#" id="cart">Cart ($56)</a>
     </nav>
   </header>
 
